reference/tests/snapshots/snapshot__run_reference_prql@take-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms/take-1.prql
---
SELECT
  orders.*
FROM
  orders
ORDER BY
  value DESC,
  date
LIMIT
  110 OFFSET 100
