reference/tests/snapshots/snapshot__run_reference_prql@transforms-12.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms-12.prql
---
SELECT
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
