reference/tests/snapshots/snapshot__run_reference_prql@transforms-6.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms-6.prql
---
SELECT
  employees.*
FROM
  employees
ORDER BY
  age,
  tenure DESC,
  salary
