reference/tests/snapshots/snapshot__run_reference_prql@transforms-7.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms-7.prql
---
SELECT
  employees.*
FROM
  employees
LIMIT
  10
